--- a/reference.bib
+++ b/reference.bib
@@ -2082,6 +2082,13 @@
   year      = {2020}
 }
 
+@inproceedings{Misra2021,
+  title     = {{An End-to-End Transformer Model for {3D} Object Detection}},
+  author    = {Misra, Ishan and Girdhar, Rohit and Joulin, Armand},
+  booktitle = ICCV,
+  year      = {2021}
+}
+
 @inproceedings{Mitra2014,
   author    = {Mitra, Niloy and Wand, Michael and Zhang, Hao (Richard) and Cohen-Or, Daniel and Kim, Vladimir and Huang, Qi-Xing},
   title     = {Structure-aware shape processing},
@@ -2162,12 +2169,14 @@
   volume  = {32}
 }
 
+
 @inproceedings{Niu2018,
   author    = {Chengjie Niu and Jun Li and Kai Xu},
   title     = {{Im2Struct}: Recovering {3D} shape structure from a single {RGB} image},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Noh2015,
   author    = {Noh, Hyeonwoo and Hong, Seunghoon and Han, Bohyung},
@@ -2176,14 +2185,12 @@
   year      = {2015}
 }
 
-
 @inproceedings{Oechsle2019,
   title     = {Texture fields: Learning texture representations in function space},
   author    = {Oechsle, Michael and Mescheder, Lars and Niemeyer, Michael and Strauss, Thilo and Geiger, Andreas},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 @article{Ohtake2003,
   author  = {Ohtake, Yutaka and Belyaev, Alexander and Alexa, Marc and Turk, Greg and Seidel, Hans-Peter},
@@ -2350,6 +2357,7 @@
   year      = {2008}
 }
 
+
 @article{Rainer2019,
   author  = {Gilles Rainer and Wenzel Jakob and Abhijeet Ghosh and Tim Weyrich},
   title   = {Neural {BTF} Compression and Interpolation},
@@ -2358,6 +2366,7 @@
   number  = {2},
   year    = {2019}
 }
+
 
 @article{Rainer2020,
   author  = {Rainer, Gilles and Ghosh, Abhijeet and Jakob, Wenzel and Weyrich, Tim},
@@ -2368,7 +2377,6 @@
   year    = 2020
 }
 
-
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
   title   = {Geometry-aware direction field processing},
@@ -2377,7 +2385,6 @@
   volume  = {29},
   number  = {1}
 }
-
 
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
@@ -2437,12 +2444,14 @@
   year      = {2015}
 }
 
+
 @inproceedings{Roufosse2019,
   author    = {Jean-Michel Roufosse and Abhishek Sharma and Maks Ovsjanikov},
   title     = {Unsupervised deep learning for structured shape matching},
   booktitle = ICCV,
   year      = 2019
 }
+
 
 @article{Rousseeuw1987,
   author  = {Peter J. Rousseeuw},
@@ -2453,7 +2462,6 @@
   issn    = {0377-0427}
 }
 
-
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
   title   = {{PointProNets}: Consolidation of Point Clouds with Convolutional Neural Networks},
@@ -2462,7 +2470,6 @@
   volume  = {37},
   number  = {2}
 }
-
 
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
@@ -2523,6 +2530,7 @@
   year      = {2016}
 }
 
+
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -2532,13 +2540,13 @@
   number  = {6}
 }
 
+
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
   author  = {Shao, Tianjia and Yang, Yin and Weng, Yanlin and Hou, Qiming and Zhou, Kun},
   journal = TVCG,
   year    = {2018}
 }
-
 
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
@@ -2566,7 +2574,6 @@
   volume  = {23},
   number  = {3}
 }
-
 
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
@@ -2607,6 +2614,7 @@
   number  = {3}
 }
 
+
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
   title   = {{Structure Recovery by Part Assembly}},
@@ -2616,6 +2624,7 @@
   number  = {6}
 }
 
+
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
   title   = {A fast multigrid algorithm for mesh deformation},
@@ -2624,7 +2633,6 @@
   volume  = {25},
   number  = {3}
 }
-
 
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
@@ -2647,7 +2655,6 @@
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
-
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
@@ -2701,12 +2708,14 @@
   year    = {2018}
 }
 
+
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
   booktitle = NIPS,
   year      = {2019}
 }
+
 
 @inproceedings{Sitzmann2020,
   title     = {Implicit Neural Representations with Periodic Activation Functions},
@@ -2715,14 +2724,12 @@
   year      = {2020}
 }
 
-
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
   title        = {Improved adversarial systems for {3D} object generation and reconstruction},
   howpublished = {arXiv:1707.09557 [cs.CV]},
   year         = {2017}
 }
-
 
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
@@ -2776,6 +2783,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
@@ -2783,13 +2791,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Su2019,
   title     = {{VL-BERT}: Pre-training of generic visual-linguistic representations},
   author    = {Su, Weijie and Zhu, Xizhou and Cao, Yue and Li, Bin and Lu, Lewei and Wei, Furu and Dai, Jifeng},
   booktitle = ICLR,
   year      = {2020}
 }
-
 
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
@@ -2799,7 +2807,6 @@
   volume  = {28},
   number  = {5}
 }
-
 
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
@@ -2845,6 +2852,7 @@
   year      = {2015}
 }
 
+
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
   title   = {Data-driven structural priors for shape completion},
@@ -2854,6 +2862,7 @@
   number  = {6}
 }
 
+
 @article{Tagliasacchi2011,
   author  = {Tagliasacchi, Andrea and Olson, Matt and Zhang, Hao and Hamarneh, Ghassan and Cohen-Or, Daniel},
   title   = {{VASE}: Volume-Aware Surface Evolution for Surface Reconstruction from Incomplete Point Clouds},
@@ -2862,7 +2871,6 @@
   volume  = {30},
   number  = {5}
 }
-
 
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
@@ -2879,6 +2887,7 @@
   year    = {2019}
 }
 
+
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
   author    = {Matthew Tancik and Pratul P. Srinivasan and Ben Mildenhall and Sara Fridovich-Keil and Nithin Raghavan and Utkarsh Singhal and Ravi Ramamoorthi and Jonathan T. Barron and Ren Ng},
@@ -2886,14 +2895,12 @@
   year      = {2020}
 }
 
-
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
   author    = {Tang, Haotian and Liu, Zhijian and Zhao, Shengyu and Lin, Yujun and Lin, Ji and Wang, Hanrui and Han, Song},
   booktitle = ECCV,
   year      = {2020}
 }
-
 
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
@@ -2911,6 +2918,7 @@
   year      = {2002}
 }
 
+
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Multi-view {3D} models from single images with a convolutional network},
@@ -2919,7 +2927,7 @@
 }
 
 @inproceedings{Tatarchenko2017,
-  author    = {M. Tatarchenko and A. Dosovitskiy and T. Brox},
+  author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Octree generating networks: efficient convolutional architectures for high-resolution {3D} outputs},
   booktitle = ICCV,
   year      = {2017}
@@ -2939,12 +2947,14 @@
   year      = 2019
 }
 
+
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
   author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
@@ -2953,14 +2963,12 @@
   year      = {2017}
 }
 
-
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
   title     = {Bilateral filtering for gray and color images},
   booktitle = ICCV,
   year      = {1998}
 }
-
 
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
@@ -3185,12 +3193,14 @@
   year    = {2020}
 }
 
+
 @inproceedings{Wang2021,
   title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
   author    = {Wang, Peng-Shuai and Yang, Yu-Qi and Zou, Qian-Fang and Wu, Zhirong and Liu, Yang and Tong, Xin},
   booktitle = AAAI,
   year      = {2021}
 }
+
 
 @inproceedings{Wang2021a,
   title     = {Generalizing to unseen domains: A survey on domain generalization},
@@ -3199,14 +3209,12 @@
   year      = {2021}
 }
 
-
 @misc{Warehouse2018,
   author = {3D Warehouse},
   title  = {{3D Warehouse}},
   year   = {2018},
   url    = {https://3dwarehouse.sketchup.com/?hl=en}
 }
-
 
 @article{Wei2015,
   author  = {Mingqiang Wei and Jinze Yu and Wai-Man Pang and Jun Wang and Jing Qin and Ligang Liu and Pheng-Ann Heng},
@@ -3295,12 +3303,14 @@
   number  = {4}
 }
 
+
 @inproceedings{Wu2019a,
   author    = {Wenxuan Wu and Zhongang Qi and Li Fuxin},
   booktitle = CVPR,
   title     = {{PointConv}: Deep Convolutional Networks on {3D} Point Clouds},
   year      = {2019}
 }
+
 
 @article{Wu2021,
   title   = {Cvt: Introducing convolutions to vision transformers},
@@ -3309,14 +3319,12 @@
   year    = {2021}
 }
 
-
 @article{Xiao2021,
   title   = {Early convolutions help transformers see better},
   author  = {Xiao, Tete and Singh, Mannat and Mintun, Eric and Darrell, Trevor and Doll{\'a}r, Piotr and Girshick, Ross},
   journal = NIPS,
   year    = {2021}
 }
-
 
 @article{Xie2015,
   author  = {Xie, Zhige and Xu, Kai and Shan, Wen and Liu, Ligang and Xiong, Yueshan and Huang, Hui},
@@ -3387,6 +3395,7 @@
   year      = {2002}
 }
 
+
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
   title     = {Mesh denoising via iterative alpha-trimming and nonlinear diffusion of normals with automatic thresholding},
@@ -3395,6 +3404,7 @@
   issn      = {1530-1052}
 }
 
+
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
   title     = {Quadric Surface Extraction by Variational Shape Approximation},
@@ -3402,14 +3412,12 @@
   year      = {2006}
 }
 
-
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
   title     = {Perspective transformer nets: Learning single-view {3D} object reconstruction without {3D} supervision},
   booktitle = NIPS,
   year      = {2016}
 }
-
 
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
@@ -3427,12 +3435,14 @@
   year    = {2015}
 }
 
+
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
   title     = {{3D} object reconstruction from a single depth view with adversarial learning},
   booktitle = {ICCV Workshop},
   year      = {2017}
 }
+
 
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
@@ -3441,7 +3451,6 @@
   year    = {2018}
 }
 
-
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
   booktitle = CVPR,
@@ -3449,13 +3458,13 @@
   year      = {2018}
 }
 
-
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
   journal = ECCV,
   year    = {2020}
 }
+
 
 @article{Yi2016,
   author  = {Yi, Li and Kim, Vladimir G. and Ceylan, Duygu and Shen, I-Chao and Yan, Mengyan and Su, Hao and Lu, Cewu and Huang, Qixing and Sheffer, Alla and Guibas, Leonidas},
@@ -3472,7 +3481,6 @@
   howpublished = {arXiv:1710.06104 [cs.CV]},
   year         = {2017}
 }
-
 
 @article{Yi2017a,
   author  = {Yi, Li and Guibas, Leonidas and Hertzmann, Aaron and Kim, Vladimir G. and Su, Hao and Yumer, Ersin},
@@ -3515,12 +3523,14 @@
   number  = {3}
 }
 
+
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
   title     = {{PU-Net}: Point Cloud Upsampling Network},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
@@ -3537,6 +3547,12 @@
   year      = {2021}
 }
 
+@article{Yu2021a,
+  title   = {{Point-BERT}: Pre-training {3D} Point Cloud Transformers with Masked Point Modeling},
+  author  = {Yu, Xumin and Tang, Lulu and Rao, Yongming and Huang, Tiejun and Zhou, Jie and Lu, Jiwen},
+  journal = {arXiv:2111.14819},
+  year    = {2021}
+}
 
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
@@ -3552,6 +3568,7 @@
   booktitle = ECCV,
   year      = {2014}
 }
+
 
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
@@ -3569,7 +3586,6 @@
   number  = {6}
 }
 
-
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
   title   = {Variational mesh decomposition},
@@ -3578,7 +3594,6 @@
   volume  = {31},
   number  = {3}
 }
-
 
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
@@ -3605,6 +3620,7 @@
   issue   = {7}
 }
 
+
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
   booktitle = ECCV,
@@ -3619,13 +3635,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
   author    = {Zhang, Pingping and Liu, Wei and Lei, Yinjie and Lu, Huchuan and Yang, Xiaoyun},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
@@ -3656,13 +3672,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhao2020,
   author    = {Xiangyun Zhao and Samuel Schulter and Gaurav Sharma and Yi-Hsuan Tsai and Manmohan Chandraker and Ying Wu},
   booktitle = ECCV,
   title     = {Object Detection with a Unified Label Space from Multiple Datasets},
   year      = {2020}
 }
-
 
 @inproceedings{Zhao2021,
   title     = {Point transformer},
@@ -3679,7 +3695,6 @@
   volume  = {17},
   number  = {10}
 }
-
 
 @inproceedings{Zheng2013,
   author    = {Zheng, Bo and Zhao, Yibiao and Yu, Joey C. and Ikeuchi, Katsushi and Zhu, Song-Chun},
@@ -3752,5 +3767,5 @@
   author    = {Chuhang Zou and Ersin Yumer and Jimei Yang and Duygu Ceylan and Derek Hoiem},
   title     = {{3D-PRNN}: Generating shape primitives with recurrent neural networks},
   booktitle = ICCV,
-  year      = {2017}
+  year      = {2017},
 }
