--- a/reference.bib
+++ b/reference.bib
@@ -36,7 +36,6 @@
   year      = {2018}
 }
 
-
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -45,6 +44,7 @@
   volume  = {28},
   number  = {3}
 }
+
 
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
@@ -62,7 +62,6 @@
   year      = {2003}
 }
 
-
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
   booktitle = {INTERSPEECH},
@@ -77,6 +76,7 @@
   booktitle = NIPS,
   year      = {2020}
 }
+
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -163,7 +163,6 @@
   year    = {2020}
 }
 
-
 @article{Au2012,
   author  = {Au, O.K.-C. and Youyi Zheng and Menglin Chen and Pengfei Xu and Chiew-Lan Tai},
   title   = {Mesh segmentation with concavity-aware fields},
@@ -172,6 +171,7 @@
   volume  = {18},
   number  = {7}
 }
+
 
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
@@ -245,13 +245,13 @@
   number  = {1}
 }
 
-
 @article{Battaglia2018,
   title   = {Relational inductive biases, deep learning, and graph networks},
   author  = {Battaglia, Peter W and Hamrick, Jessica B and Bapst, Victor and Sanchez-Gonzalez, Alvaro and Zambaldi, Vinicius and Malinowski, Mateusz and Tacchetti, Andrea and Raposo, David and Santoro, Adam and Faulkner, Ryan and others},
   journal = {arXiv preprint arXiv:1806.01261},
   year    = {2018}
 }
+
 
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
@@ -277,7 +277,6 @@
   number  = {8}
 }
 
-
 @article{Berger2017,
   author  = {Berger, Matthew and Tagliasacchi, Andrea and Seversky, Lee M. and Alliez, Pierre and Guennebaud, Ga\"{e}l and Levine, Joshua A. and Sharf, Andrei and Silva, Claudio T.},
   title   = {A survey of surface reconstruction from point clouds},
@@ -286,6 +285,7 @@
   volume  = {36},
   number  = {1}
 }
+
 
 @article{Besl1992,
   author  = {Besl, Paul J and McKay, Neil D},
@@ -468,6 +468,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
   author    = {Chabra, Rohan and Lenssen, Jan Eric and Ilg, Eddy and Schmidt, Tanner and Straub, Julian and Lovegrove, Steven and Newcombe, Richard},
@@ -489,14 +490,12 @@
   year      = {2017}
 }
 
-
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
   title     = {High performance convolutional neural networks for document processing},
   booktitle = {International Conference on Frontiers in Handwriting Recognition (ICFHR)},
   year      = {2006}
 }
-
 
 @article{Chen2003,
   author    = {Chen, Ding-Yun and Tian, Xiao-Pei and Shen, Yu-Te and Ouhyoung, Ming},
@@ -507,6 +506,7 @@
   booktitle = CGF
 }
 
+
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {A benchmark for {3D} mesh segmentation},
@@ -516,13 +516,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
   title     = {Joint cascade face detection and alignment},
   booktitle = {ECCV},
   year      = {2014}
 }
-
 
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
@@ -540,13 +540,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
   title     = {{BAE-NET}: Branched autoencoder for shape co-segmentation},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
@@ -555,7 +555,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -563,12 +562,14 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @article{Cho2014,
   author  = {Cho, Hojin and Lee, Hyunjoon and Kang, Henry and Lee, Seungyong},
@@ -768,14 +769,12 @@
   year      = {2021}
 }
 
-
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
   title   = {{InverseCSG}: Automatic conversion of {3D} models to {CSG} trees},
   journal = SA,
   year    = {2018}
 }
-
 
 @article{Ebke2013,
   author  = {Ebke, Hans-Christian and Bommes, David and Campen, Marcel and Kobbelt, Leif},
@@ -785,6 +784,7 @@
   volume  = {32},
   number  = {6}
 }
+
 
 @article{Ebke2014,
   author  = {Ebke, Hans-Christian and Campen, Marcel and Bommes, David and Kobbelt, Leif},
@@ -812,6 +812,7 @@
   volume  = {9},
   year    = {2021}
 }
+
 
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
@@ -843,6 +844,13 @@
   title     = {Filter forests for learning data-dependent convolutional kernels},
   booktitle = CVPR,
   year      = {2014}
+}
+
+@inproceedings{Fey2018,
+  title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
+  author    = {Fey, Matthias and Lenssen, Jan Eric and Weichert, Frank and M{\"u}ller, Heinrich},
+  booktitle = CVPR,
+  year      = {2018}
 }
 
 @inproceedings{Firman2016,
@@ -920,7 +928,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Gilmer2017,
   title     = {Neural message passing for quantum chemistry},
   author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
@@ -935,6 +942,7 @@
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
@@ -989,7 +997,6 @@
   year    = {2017}
 }
 
-
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
   title     = {{3D} semantic segmentation with submanifold sparse convolutional networks},
@@ -1004,6 +1011,7 @@
   booktitle = NIPS,
   year      = {2020}
 }
+
 
 @inproceedings{Gropp2020,
   title     = {Implicit geometric regularization for learning shapes},
@@ -1418,6 +1426,13 @@
   year    = {2006}
 }
 
+@article{Ju2002,
+  title   = {Dual contouring of hermite data},
+  author  = {Ju, Tao and Losasso, Frank and Schaefer, Scott and Warren, Joe},
+  journal = SIG,
+  year    = {2002}
+}
+
 @article{Ju2004,
   author  = {Ju, Tao},
   title   = {Robust repair of polygonal models},
@@ -1591,13 +1606,13 @@
   year      = {2013}
 }
 
-
 @article{Kingma2014a,
   title   = {Adam: A method for stochastic optimization},
   author  = {Kingma, Diederik P. and Ba, Jimmy},
   journal = ICLR,
   year    = {2014}
 }
+
 
 @inproceedings{Klokov2017,
   author    = {Roman Klokov and Victor Lempitsky},
@@ -1705,7 +1720,6 @@
   number  = {99}
 }
 
-
 @inproceedings{Lee2005,
   author    = {Kai-Wah Lee and Wen-Ping Wang},
   title     = {Feature-preserving mesh denoising via bilateral normal filtering},
@@ -1720,6 +1734,7 @@
   booktitle = CVPR,
   year      = {2015}
 }
+
 
 @inproceedings{Lei2020,
   title     = {Analytic Marching: An Analytic Meshing Solution from Deep Implicit Surface Networks},
@@ -1754,13 +1769,13 @@
   number  = {4}
 }
 
-
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
   title     = {{FPNN}: field probing neural networks for {3D} data},
   booktitle = NIPS,
   year      = {2016}
 }
+
 
 @article{Li2017,
   author  = {Li, Jun and Xu, Kai and Chaudhuri, Siddhartha and Yumer, Ersin and Zhang, Hao and Guibas, Leonidas},
@@ -1778,13 +1793,13 @@
   booktitle = NIPS,
   year      = {2018}
 }
+
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
   title     = {{SO-Net}: Self-organizing network for point cloud analysis},
   booktitle = CVPR,
   year      = 2018
 }
-
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
@@ -2169,7 +2184,6 @@
   volume  = {32}
 }
 
-
 @inproceedings{Niu2018,
   author    = {Chengjie Niu and Jun Li and Kai Xu},
   title     = {{Im2Struct}: Recovering {3D} shape structure from a single {RGB} image},
@@ -2184,6 +2198,7 @@
   booktitle = ICCV,
   year      = {2015}
 }
+
 
 @inproceedings{Oechsle2019,
   title     = {Texture fields: Learning texture representations in function space},
@@ -2357,7 +2372,6 @@
   year      = {2008}
 }
 
-
 @article{Rainer2019,
   author  = {Gilles Rainer and Wenzel Jakob and Abhijeet Ghosh and Tim Weyrich},
   title   = {Neural {BTF} Compression and Interpolation},
@@ -2376,6 +2390,7 @@
   number  = 2,
   year    = 2020
 }
+
 
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
@@ -2444,7 +2459,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Roufosse2019,
   author    = {Jean-Michel Roufosse and Abhishek Sharma and Maks Ovsjanikov},
   title     = {Unsupervised deep learning for structured shape matching},
@@ -2461,6 +2475,7 @@
   volume  = {20},
   issn    = {0377-0427}
 }
+
 
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
@@ -2530,7 +2545,6 @@
   year      = {2016}
 }
 
-
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -2548,6 +2562,7 @@
   year    = {2018}
 }
 
+
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
   title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
@@ -2557,7 +2572,6 @@
   number  = {4}
 }
 
-
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
   author  = {Shapira, Lior and Shalom, Shy and Shamir, Ariel and Cohen-Or, Daniel and Zhang, Hao},
@@ -2565,6 +2579,7 @@
   volume  = {89},
   year    = {2010}
 }
+
 
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
@@ -2614,7 +2629,6 @@
   number  = {3}
 }
 
-
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
   title   = {{Structure Recovery by Part Assembly}},
@@ -2634,6 +2648,7 @@
   number  = {3}
 }
 
+
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
@@ -2641,13 +2656,13 @@
   year    = {2015}
 }
 
-
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
   author  = {Shi, Bowen and Zhang, Xiaopeng and Xu, Haohang and Dai, Wenrui and Zou, Junni and Xiong, Hongkai and Tian, Qi},
   journal = {arXiv preprint arXiv:2106.04121},
   year    = {2021}
 }
+
 
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
@@ -2708,7 +2723,6 @@
   year    = {2018}
 }
 
-
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
@@ -2723,6 +2737,7 @@
   booktitle = NIPS,
   year      = {2020}
 }
+
 
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
@@ -2783,7 +2798,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
@@ -2798,6 +2812,7 @@
   booktitle = ICLR,
   year      = {2020}
 }
+
 
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
@@ -2852,7 +2867,6 @@
   year      = {2015}
 }
 
-
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
   title   = {Data-driven structural priors for shape completion},
@@ -2872,13 +2886,13 @@
   number  = {5}
 }
 
+
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
   year      = {2021},
   booktitle = CVPR
 }
-
 
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
@@ -2894,6 +2908,7 @@
   booktitle = NIPS,
   year      = {2020}
 }
+
 
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
@@ -2918,13 +2933,13 @@
   year      = {2002}
 }
 
-
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Multi-view {3D} models from single images with a convolutional network},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -2947,7 +2962,6 @@
   year      = 2019
 }
 
-
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
   author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
@@ -2962,6 +2976,7 @@
   booktitle = IROS,
   year      = {2017}
 }
+
 
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
@@ -3193,7 +3208,6 @@
   year    = {2020}
 }
 
-
 @inproceedings{Wang2021,
   title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
   author    = {Wang, Peng-Shuai and Yang, Yu-Qi and Zou, Qian-Fang and Wu, Zhirong and Liu, Yang and Tong, Xin},
@@ -3208,6 +3222,7 @@
   booktitle = {IJCAI},
   year      = {2021}
 }
+
 
 @misc{Warehouse2018,
   author = {3D Warehouse},
@@ -3303,7 +3318,6 @@
   number  = {4}
 }
 
-
 @inproceedings{Wu2019a,
   author    = {Wenxuan Wu and Zhongang Qi and Li Fuxin},
   booktitle = CVPR,
@@ -3318,6 +3332,7 @@
   journal = {arXiv preprint arXiv:2103.15808},
   year    = {2021}
 }
+
 
 @article{Xiao2021,
   title   = {Early convolutions help transformers see better},
@@ -3386,6 +3401,13 @@
   title     = {{SpiderCNN}: Deep Learning on Point Sets with Parameterized Convolutional Filters},
   booktitle = ECCV,
   year      = {2018}
+}
+
+@inproceedings{Xu2021,
+  title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
+  author    = {Xu, Mutian and Ding, Runyu and Zhao, Hengshuang and Qi, Xiaojuan},
+  booktitle = CVPR,
+  year      = {2021}
 }
 
 @inproceedings{Yagou2002,
@@ -3767,5 +3789,5 @@
   author    = {Chuhang Zou and Ersin Yumer and Jimei Yang and Duygu Ceylan and Derek Hoiem},
   title     = {{3D-PRNN}: Generating shape primitives with recurrent neural networks},
   booktitle = ICCV,
-  year      = {2017},
+  year      = {2017}
 }
