--- a/reference.bib
+++ b/reference.bib
@@ -1076,11 +1076,13 @@
   primaryclass  = {cs.CV}
 }
 
-@article{Guo2020,
+@article{Guo2021,
   title   = {{PCT}: Point cloud transformer},
   author  = {Guo, Meng-Hao and Cai, Jun-Xiong and Liu, Zheng-Ning and Mu, Tai-Jiang and Martin, Ralph R and Hu, Shi-Min},
-  journal = {arXiv preprint arXiv:2012.09688},
-  year    = {2020}
+  journal = {Computational Visual Media},
+  volume  = {7},
+  number  = {2},
+  year    = {2021}
 }
 
 @inproceedings{Gupta2016,
